Fixed text spacing

--- a/themes/bytethesis/static/css/general.css
+++ b/themes/bytethesis/static/css/general.css
@@ -363,3 +363,17 @@ h1 {
 pre {
     background-color: var(--object-color) !important;
 }
+
+p {
+    margin-top: 0px;
+    margin-bottom: 12px;
+}
+
+h2,h3,h4,h6 {
+    margin-top: 18px;
+    margin-bottom: 8px;
+}
+
+ul {
+    margin-top: 0;
+}
